Polish folder creating
